docs/tests/typing/bad/testfile-assign-6.cpp

class S { public: int a; };
int main() { int x; S s; s = x; }
